corrected the accessibilty and contrast errors for home, signin,signup, dashboard, workouts pages

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,7 +1,31 @@
+.nav-link {
+  font-size: 18px;
+  text-decoration: none;
+  padding: 10px 15px;
+  margin: 0 5px;
+  position: relative;
+  display: inline-block;
+  transition: color 0.3s ease-in-out;
+}
+.nav-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 0%;
+  height: 2px;
+  background-color: #f8ae96;
+  transition: width 0.3s ease-in-out;
+}
+
+.nav-link:hover::after {
+  width: 100%;
+}
+
 .nav-link:hover {
-  background-color: #d3d3d3;
-  color: #000;
-  border-radius: 5px;
+  color: #f8ae96;
+  transform: translateY(-3px);
+  font-weight: 600;
 }
 
 .home-container {
@@ -13,7 +37,6 @@ body {
   min-height: 100vh;
   width: 100vw;
 }
-
 
 body {
   background-color: #f5f5f5;
@@ -541,7 +564,6 @@ body {
   font-weight: bold;
 }
 
-
 /* Responsive Design */
 @media (max-width: 768px) {
   .bar-chart-container {
@@ -601,4 +623,3 @@ body {
   flex-direction: column;
   gap: 20px;
 }
-
